# jetson_nano_proyects

./: .gitignore  README.md
02_reg_vs_no_reg/: reg_vs_no_reg.cu
cuda_proyects/: README.md
cuda_proyects/00_vec_add/: CMakeLists.txt  README.md  vec_add_slow.cu
cuda_proyects/01_reg_vs_no_reg/: CMakeLists.txt  README.md
cuda_proyects/02_mac/: CMakeLists.txt  README.md  mac.cu  mac_big.cu
cuda_proyects/03_zero_copy/: CMakeLists.txt  README.md  vec_add.cu  vec_add_zero_copy.cu
cuda_proyects/04_matmul/: 00_mat_mul.cu  01_mat_mul.cu  02_mat_mul.cu  03_mat_mul.cu  04_mat_mul.cu  05_mat_mul.cu  06_mat_mul.cu  07_mat_mul.cu  08_mat_mul.cu  CMakeLists.txt  README.md  mat_mul_nvidia_cuda_core.cu
cuda_proyects/vec_add/: CMakeLists.txt  README.md  vec_add.cu  vec_add_fast.cu  vec_add_slow.cu  vec_add_test.cu
nitefury/: README.md
nitefury/00_test_system/: CMakeLists.txt  README.md  axi_full.c  axi_lite.c  top.tcl
